--- a/styles/global.scss
+++ b/styles/global.scss
@@ -29,3 +29,9 @@ a {
     color: inherit;
   }
 }
+.title {
+  font-weight: 500;
+  font-size: 56px;
+  text-align: center;
+  margin-bottom: 55px;
+}
