--- a/styles/skills.scss
+++ b/styles/skills.scss
@@ -1,8 +1,13 @@
 .fa.fa-star {
+  margin: 3px;
   color: var(--secondary-text-color);
 }
 .fa.fa-star.checked {
   color: var(--main-color);
+}
+.skills__items {
+  gap: calc(var(--gap) * 5);
+  flex-wrap: wrap;
 }
 .skill__item {
   &__img {
@@ -13,19 +18,22 @@
   &__skill {
     text-align: center;
     margin-bottom: 50px;
+    font-size: 14px;
   }
   &__stars {
-    margin-bottom: 72px;
+    margin-bottom: 70px;
   }
 }
-.skills__arrow {
-  margin: 0 auto;
-  width: 30px;
-  height: 30px;
-  border-top: 5px solid var(--main-color);
-  border-right: 5px solid var(--main-color);
-  transform: rotate(135deg);
-}
-.skills__hidden {
-  display: none;
+.skills {
+  &__arrow {
+    margin: 0 auto;
+    width: 24px;
+    height: 24px;
+    border-top: 5px solid var(--main-color);
+    border-right: 5px solid var(--main-color);
+    transform: rotate(135deg);
+  }
+  &__hidden {
+    display: none;
+  }
 }
