--- a/styles/style.css
+++ b/styles/style.css
@@ -148,38 +148,38 @@ a:hover {
   position: relative;
   max-width: 100%;
   margin: 0 auto;
+  padding-top: 40px;
 }
 
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
   content: "";
   position: absolute;
-  width: 6px;
+  width: 1px;
   background-color: var(--main-color);
   top: 0;
   bottom: 0;
   left: 50%;
-  margin-left: -3px;
 }
 
 /* Container around content */
-.cont {
-  padding: 10px 40px;
+.timeline__container {
+  padding: 25px 16px 0;
   position: relative;
   background-color: inherit;
   width: 50%;
 }
 
 /* The circles on the timeline */
-.cont::after {
+.timeline__container::after {
   content: "";
   position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: white;
-  border: 4px solid #FF9F55;
-  top: 15px;
+  width: 12px;
+  height: 12px;
+  right: -6px;
+  background-color: #c4c4c4;
+  border: 4px solid #c4c4c4;
+  top: 50%;
   border-radius: 50%;
   z-index: 1;
 }
@@ -190,76 +190,69 @@ a:hover {
 }
 
 /* Place the container to the right */
-.right {
+.timeline__right {
   left: 50%;
 }
 
-/* Add arrows to the left container (pointing right) */
-.left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
-}
-
-/* Add arrows to the right container (pointing left) */
-.right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid white;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
-}
-
 /* Fix the circle for containers on the right side */
-.right::after {
-  left: -16px;
+.timeline__right::after {
+  left: -6px;
 }
 
 /* The actual content */
-.content {
-  padding: 20px 30px;
-  background-color: white;
+.timeline__content {
   position: relative;
   border-radius: 6px;
+  align-items: center;
+}
+
+.timeline__content-left {
+  text-align: right;
+}
+
+.timeline__content__work {
+  width: 100%;
+}
+
+.timeline__content__date, .timeline__content__do {
+  color: var(--secondary-text-color);
+}
+.timeline__content__date {
+  width: 100%;
+}
+.timeline__content__date-left {
+  order: 1;
+}
+.timeline__content__do {
+  font-size: 16px;
+}
+.timeline__content__place {
+  font-weight: 500;
+  margin-bottom: calc(var(--gap) / 2);
+}
+.timeline__content__content__prof {
+  margin-bottom: var(--gap);
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
-  /* Place the timelime to the left */
+  /* Place the timeline to the left */
   .timeline::after {
     left: 31px;
   }
   /* Full-width containers */
-  .cont {
+  .timeline__container {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
   }
-  /* Make sure that all arrows are pointing leftwards */
-  .cont::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
   /* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-    left: 15px;
+  .left::after,
+  .timeline__right::after {
+    left: 0;
   }
   /* Make all right containers behave like the left ones */
-  .right {
-    left: 0%;
+  .timeline__right {
+    left: 0;
   }
 }
