--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -32,10 +32,12 @@
   height: 12px;
   right: -6px;
   background-color: #c4c4c4;
-  border: 4px solid #c4c4c4;
   top: 50%;
   border-radius: 50%;
   z-index: 1;
+}
+.timeline__container-now::after {
+  background-color: var(--main-color);
 }
 
 /* Place the container to the left */
@@ -72,6 +74,9 @@
   }
   &__date {
     width: 100%;
+    &-now {
+      color: var(--buttons-color);
+    }
     &-left {
       order: 1;
     }
