--- a/styles/style.css
+++ b/styles/style.css
@@ -178,10 +178,13 @@ a:hover {
   height: 12px;
   right: -6px;
   background-color: #c4c4c4;
-  border: 4px solid #c4c4c4;
   top: 50%;
   border-radius: 50%;
   z-index: 1;
+}
+
+.timeline__container-now::after {
+  background-color: var(--main-color);
 }
 
 /* Place the container to the left */
@@ -219,6 +222,9 @@ a:hover {
 }
 .timeline__content__date {
   width: 100%;
+}
+.timeline__content__date-now {
+  color: var(--buttons-color);
 }
 .timeline__content__date-left {
   order: 1;
