--- a/styles/about.scss
+++ b/styles/about.scss
@@ -9,6 +9,7 @@
     max-width: 572px;
     &__name {
       margin-bottom: var(--gap);
+      text-align: left;
     }
     &__role {
       margin-bottom: 40px;
