--- a/styles/about.scss
+++ b/styles/about.scss
@@ -14,6 +14,7 @@
     &__role {
       margin-bottom: 40px;
       color: var(--secondary-text-color);
+      text-align: left;
     }
     &__about__me {
       margin-bottom: 20px;
