--- a/styles/style.css
+++ b/styles/style.css
@@ -279,3 +279,70 @@ a:hover {
     left: 0;
   }
 }
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  padding-left: calc(var(--gap) * 7);
+}
+
+.swiper-slide__content__img {
+  width: 100%;
+  margin-bottom: calc(var(--gap) * 7);
+}
+.swiper-slide__content__description {
+  padding: 72px 130px 0;
+  font-size: 24px;
+  text-align: left;
+}
+.swiper-slide__content__description__name {
+  font-weight: 500;
+  margin-bottom: var(--gap);
+}
+.swiper-slide__content__description__desc {
+  color: var(--secondary-text-color);
+  margin-bottom: calc(var(--gap) * 9);
+}
+
+.swiper-pagination {
+  position: relative;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 0;
+  margin-right: calc(var(--gap) * 2);
+}
+
+.swiper-pagination-bullet {
+  width: 17px;
+  height: 17px;
+  background-color: var(--buttons-color);
+}
