--- a/styles/style.css
+++ b/styles/style.css
@@ -279,6 +279,10 @@ a:hover {
     left: 0;
   }
 }
+.projects {
+  background-color: #fafafa;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -287,7 +291,7 @@ a:hover {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: #fafafa;
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -345,4 +349,20 @@ a:hover {
   width: 17px;
   height: 17px;
   background-color: var(--buttons-color);
+}
+
+.languages {
+  background-color: #fafafa;
+}
+.languages__item {
+  text-align: center;
+}
+.languages__item__img {
+  height: 182px;
+  width: 182px;
+  margin-bottom: calc(var(--gap) * 3);
+}
+.languages__lang {
+  font-weight: 500;
+  margin-bottom: var(--gap);
 }
