--- a/styles/project.scss
+++ b/styles/project.scss
@@ -1,3 +1,6 @@
+.projects {
+  background-color: #fafafa;
+}
 .swiper {
   width: 100%;
   height: 100%;
@@ -6,7 +9,7 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
+  background: #fafafa;
 
   /* Center slide text vertically */
   display: -webkit-box;
