--- a/styles/about.scss
+++ b/styles/about.scss
@@ -44,3 +44,18 @@
     font-weight: 400;
   }
 }
+@media (max-width: 1000px) {
+  .about {
+    &__infs {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__photo {
+      height: 465px;
+      width: 385px;
+      order: -1;
+      margin-bottom: 24px;
+    }
+  }
+}
