--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -7,7 +7,7 @@
   }
   &__inf {
     padding-left: 216px;
-    a{
+    a {
       text-decoration: underline;
       display: block;
       margin-bottom: var(--gap);
@@ -15,7 +15,21 @@
     &__links {
       padding-top: calc(var(--gap) * 12);
       gap: calc(var(--gap) * 2);
-      margin-bottom:calc(var(--gap) * 13) ;
+      margin-bottom: calc(var(--gap) * 13);
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .contact__content {
+    flex-direction: column;
+    align-items: center;
+    &__photo img {
+      height: 300px;
+      width: 300px;
+    }
+    &__inf {
+      padding-left: 0;
     }
   }
 }
