--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -1,4 +1,4 @@
-.experience{
+.experience {
   background-color: var(--general-white-color);
 }
 .timeline {
@@ -119,5 +119,14 @@
   /* Make all right containers behave like the left ones */
   .timeline__right {
     left: 0;
+  }
+  .timeline__left:after {
+    left: 0;
+  }
+  .timeline__content__date-left {
+    order: 0;
+  }
+  .timeline__content-left {
+    text-align: left;
   }
 }
