--- a/styles/header.scss
+++ b/styles/header.scss
@@ -6,3 +6,13 @@
     border-bottom: 1px solid var(--secondary-color);
   }
 }
+@media (max-width: 900px) {
+  .header__link {
+    font-size: 16px;
+  }
+}
+@media (max-width: 600px) {
+  .header {
+    display: none;
+  }
+}
