--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,3 +1,4 @@
+@import "variables";
 .about {
   font-weight: 500;
   font-size: 56px;
@@ -8,18 +9,18 @@
   &__inf {
     max-width: 572px;
     &__name {
-      margin-bottom: var(--gap);
+      margin-bottom: $gap;
       text-align: left;
     }
     &__role {
       margin-bottom: 40px;
-      color: var(--secondary-text-color);
+      color: $secondary-text-color;
       text-align: left;
     }
     &__about__me {
       margin-bottom: 20px;
       font-size: 22px;
-      color: var(--secondary-color);
+      color: $secondary-color;
       &:last-child {
         margin-bottom: 72px;
       }
@@ -31,14 +32,14 @@
 
         padding: 14px 0;
         font-size: 24px;
-        color: var(--general-white-color);
-        background-color: var(--buttons-color);
+        color: $general-white-color;
+        background-color: $buttons-color;
       }
     }
   }
 }
 .button__href {
-  color: var(--general-white-color);
+  color: $general-white-color;
   &:hover {
     text-decoration: none;
     font-weight: 400;
