--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,18 +1,9 @@
-:root {
-  --main-color: #120d0e;
-  --secondary-color: #3d3b3c;
-  --secondary-text-color: #bebebe;
-  --general-white-color: #ffffff;
-  --accent-blue: #10367c;
-  --buttons-color: #3a4576;
-  --gap: 8px;
-  --bgcolor: #fafafa;
-}
+@import "variables";
 body {
   font-weight: 400;
   font-family: Roboto, sans-serif;
   font-size: 24px;
-  color: var(--main-color);
+  color: $main-color;
   line-height: 1.2;
 }
 
@@ -22,7 +13,7 @@ body {
   padding: 72px 16px;
 }
 a {
-  color: var(--main-color);
+  color: $main-color;
   text-decoration: none;
   &:hover {
     text-decoration: underline;
