--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,9 +1,10 @@
+@import "variables";
 .header {
-  background-color: var(--general-white-color);
+  background-color: $general-white-color;
   &__container {
     padding-top: 40px;
     padding-bottom: 20px;
-    border-bottom: 1px solid var(--secondary-color);
+    border-bottom: 1px solid $secondary-color;
   }
 }
 @media (max-width: 900px) {
