--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
+@import "variables";
 @import "global";
 @import "header";
 @import "about";
